[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jasons-kickstart-compiler"
version = "0.0.0"
requires-python = ">=3.7,<4"
# I’m not going to constrain Jinja2’s version. I expect that if there
# are significant backwards incompatible changes, then a new package
# (Jinja3) will be created.
dependencies = ["Jinja2"]

[project.urls]
Homepage = "https://jasonyundt.website/gitweb?p=jasons-kickstart-compiler;a=summary"

[project.scripts]
jasons-kickstart-compiler = "jasons_kickstart_compiler:main"
